# VeriEdge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
artifacts/TSTC/: README.md  TSTC.md  make_publication_figures.py  noise_sweep_config.json  noise_sweep_config_fine_small.json  noise_sweep_config_token1over8_smallband.json  noise_sweep_config_ultra_small.json  run_noise_sweep.py
artifacts/equivalence/: README.md  config.example.yaml  equivalence_common.py  exp_equivalence.md  plot.py  requirements.txt  run_1device.py  run_2device.py  run_3device.py  score.py
artifacts/inference-E2E/: README.md  exp_exo.md
artifacts/thc/: README.md  T1_design.md  T3_hetero_runbook.md  THC&TSTC.md  requirements.txt  revision.md
docs/: PAPER1_KICKOFF_MANUAL 2.docx  collaboration_rules.md  module_map.md
paper1_veriedge/: exo-free-runbook-cn.md  exo_free_runbook.md  weekly_report_template.md
paper1_veriedge/E1/: README.md  build_table4_results.py  build_table4_variant_results.py  export_pairwise.sh  generate_qwen_prompt_splits.py  plot_e1_results.py  plot_table4_results.py  plot_table4_variants.py  real_e1.sh  run_capture.sh  run_table4_final.sh  run_table4_remaining.sh  search_tstc_current_mixed.py  start_server_jlmini_2.sh  start_server_jlmini_3.sh  start_server_linux124.sh
paper1_veriedge/E2/: README.md  build_e2_equal_budget_baseline.py  build_e2_live_projcos_sweeps.py  build_e2_material_tamper_full_matrix.py  build_e2_strict_tables.py  plot_e2_strict_results.py  run_ablation.sh  run_noise_sweep.sh
paper1_veriedge/E4/: README.md  (+6 more)
requirements/: e4.txt  e5.txt
(+236 files in other folders)
